--- a/notebooks/6_Simulation_Engine.ipynb
+++ b/notebooks/6_Simulation_Engine.ipynb
@@ -1,6 +1,363 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c84f8074-e6f1-42ee-b84b-3a723070574b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import fastf1\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import itertools\n",
+    "import joblib\n",
+    "import logging\n",
+    "from collections import defaultdict\n",
+    "from tabulate import tabulate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7dd587cc-255c-48fe-bff0-f18a7e2c0b8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Paths\n",
+    "data_path = r\"Desktop\\F1Project\\data\"\n",
+    "model_path = r\"C:Desktop\\F1Project\\models\"\n",
+    "\n",
+    "# Load test features and model\n",
+    "train_features = pd.read_pickle(f\"{data_path}/train_features.pkl\")\n",
+    "test_features = pd.read_pickle(f\"{data_path}/test_features.pkl\")\n",
+    "\n",
+    "\n",
+    "rf_model = joblib.load(f\"{model_path}/rf_model.pkl\")\n",
+    "gbr_model = joblib.load(f\"{model_path}/gbr_model.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f9e1fb56-375b-4fcc-886e-3f0312d26d78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_race_parameters(year, gp_name, session_type='R'):\n",
+    "    fastf1.Cache.enable_cache(r\"C:\\Users\\Sran\\Desktop\\F1Project\\cache\")\n",
+    "    #\"C:\\Users\\Sran\\Desktop\\F1Project\\cache\"\n",
+    "    session = fastf1.get_session(year, gp_name, session_type)\n",
+    "    session.load()\n",
+    "    driver_name = {drv: data[\"FullName\"] for drv, data in session.results.iterrows()}\n",
+    "    laps = session.laps\n",
+    "    total_laps = int(laps.LapNumber.max())\n",
+    "    pit_events = laps[laps.PitInTime.notna() & laps.PitOutTime.notna()]\n",
+    "    avg_pit = (\n",
+    "        (pit_events.PitOutTime - pit_events.PitInTime)\n",
+    "        .dt.total_seconds()\n",
+    "        .mean()\n",
+    "        if not pit_events.empty else 23.0\n",
+    "    )\n",
+    "    return total_laps, avg_pit\n",
+    "\n",
+    "logging.getLogger('fastf1').setLevel(logging.WARNING)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b22b5d8d-0af9-494f-8f7a-85e839db1c91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_artifacts():\n",
+    "    #train = pd.read_pickle(\"data/train_features.pkl\")\n",
+    "    train = pd.read_pickle(f\"{data_path}/train_features.pkl\")\n",
+    "    #model = joblib.load(\"models/gbr_model.pkl\")\n",
+    "    model = joblib.load(f\"{model_path}/gbr_model.pkl\")\n",
+    "\n",
+    "    # avg degradation per compound\n",
+    "    avg_deg = (\n",
+    "        train.groupby(\"Compound\").Degradation.sum() /\n",
+    "        train.groupby(\"Compound\").LapsInStint.sum()\n",
+    "    ).to_dict()\n",
+    "\n",
+    "    # reconstruct your one-hot columns\n",
+    "    enc = pd.get_dummies(train, columns=[\"Driver\",\"Compound\"], drop_first=True)\n",
+    "    feat_cols     = [c for c in enc.columns if c!=\"LapTimeSeconds\"]\n",
+    "    driver_cols   = [c for c in feat_cols if c.startswith(\"Driver_\")]\n",
+    "    compound_cols = [c for c in feat_cols if c.startswith(\"Compound_\")]\n",
+    "\n",
+    "    return avg_deg, feat_cols, driver_cols, compound_cols, model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "655a5d6a-596c-427e-a6af-7c396586c65b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate_strategy(driver, strategy,\n",
+    "                      total_laps, avg_deg,\n",
+    "                      feat_cols, driver_cols, compound_cols,\n",
+    "                      model, pit_penalty):\n",
+    "    \"\"\"\n",
+    "    Build one DataFrame for all laps, call .predict once, sum + pit penalties.\n",
+    "    Returns (total_time, pit_laps_list).\n",
+    "    \"\"\"\n",
+    "    rows = []\n",
+    "    lap_start = 1\n",
+    "    pit_laps = []\n",
+    "    drv_map = {dc: int(dc==f\"Driver_{driver}\") for dc in driver_cols}\n",
+    "\n",
+    "    for stint_idx, (cmpd, length) in enumerate(strategy):\n",
+    "        cmp_map = {cc: int(cc==f\"Compound_{cmpd}\") for cc in compound_cols}\n",
+    "        if stint_idx>0:\n",
+    "            # pit on the first lap of this stint\n",
+    "            pit_lap = lap_start\n",
+    "            pit_laps.append(pit_lap)\n",
+    "\n",
+    "        for i in range(length):\n",
+    "            lap = lap_start + i\n",
+    "            rows.append({\n",
+    "                \"LapNumber\":   lap,\n",
+    "                \"LapsInStint\": i+1,\n",
+    "                \"Degradation\": avg_deg.get(cmpd,0.0)*i,\n",
+    "                \"PitEvent\":    int(stint_idx>0 and i==0),\n",
+    "                \"Flagged\":     0,\n",
+    "                \"LapPercent\":  lap/total_laps,\n",
+    "                **drv_map, **cmp_map\n",
+    "            })\n",
+    "        lap_start += length\n",
+    "\n",
+    "    df = pd.DataFrame(rows)[feat_cols]\n",
+    "    preds = model.predict(df)\n",
+    "    total_time = preds.sum() + pit_penalty * len(pit_laps)\n",
+    "    return total_time, pit_laps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "90650b6c-14d6-4ed2-936e-426a378c3d19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def all_strategies_for_driver(driver, pref_cmpd,\n",
+    "                              total_laps, avg_deg,\n",
+    "                              feat_cols, driver_cols, compound_cols,\n",
+    "                              model, pit_penalty):\n",
+    "    \"\"\"\n",
+    "    Enumerate all 1-stop & 2-stop strategies for this driver,\n",
+    "    returning list of (time, pit_laps, strat_tuple).\n",
+    "    \"\"\"\n",
+    "    MAX_LIFE = {\"SOFT\":30,\"MEDIUM\":40,\"HARD\":50}\n",
+    "    strategies = []\n",
+    "    comps = list(MAX_LIFE)\n",
+    "\n",
+    "    for stops in (1,2):\n",
+    "        stints = stops + 1\n",
+    "        for combo in itertools.permutations(comps, stints):\n",
+    "            if combo[0] != pref_cmpd:\n",
+    "                continue\n",
+    "            if stops == 1:\n",
+    "                c1,c2 = combo\n",
+    "                for l1 in range(1, min(MAX_LIFE[c1], total_laps-1)+1):\n",
+    "                    l2 = total_laps - l1\n",
+    "                    if l2 <= MAX_LIFE[c2]:\n",
+    "                        strat = [(c1,l1),(c2,l2)]\n",
+    "                        t, pits = simulate_strategy(\n",
+    "                            driver, strat, total_laps,\n",
+    "                            avg_deg, feat_cols, driver_cols, compound_cols,\n",
+    "                            model, pit_penalty\n",
+    "                        )\n",
+    "                        strategies.append((t, pits, strat))\n",
+    "            else:\n",
+    "                c1,c2,c3 = combo\n",
+    "                for l1 in range(1, min(MAX_LIFE[c1], total_laps-2)+1):\n",
+    "                    for l2 in range(1, min(MAX_LIFE[c2], total_laps-l1-1)+1):\n",
+    "                        l3 = total_laps - l1 - l2\n",
+    "                        if l3 <= MAX_LIFE[c3]:\n",
+    "                            strat = [(c1,l1),(c2,l2),(c3,l3)]\n",
+    "                            t, pits = simulate_strategy(\n",
+    "                                driver, strat, total_laps,\n",
+    "                                avg_deg, feat_cols, driver_cols, compound_cols,\n",
+    "                                model, pit_penalty\n",
+    "                            )\n",
+    "                            strategies.append((t, pits, strat))\n",
+    "\n",
+    "    # sort by ascending total time\n",
+    "    strategies.sort(key=lambda x: x[0])\n",
+    "    return strategies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "451e24f3-5396-4b6d-a6a6-cba452a78dbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_time(sec):\n",
+    "    h, rem = divmod(sec, 3600)\n",
+    "    m, rem = divmod(rem, 60)\n",
+    "    s, ms  = divmod(rem, 1)\n",
+    "    return f\"{int(h)}:{int(m):02d}:{int(s):02d}.{int(ms*1000):03d}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "c3671384-8c0f-4893-b03f-3ad89b2a36fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "driver_name = { \"VER\": \"Max Verstappen\", \"HAM\": \"Lewis Hamilton\", \"PIA\": \"Oscar Piastri\", \"NOR\": \"Lando Norris\", \"LEC\": \"Charles Leclerc\",  \"RUS\": \"George Russell\",\n",
+    "    \"ALO\": \"Fernando Alonso\", \"SAI\": \"Carlos Sainz\", \"TSU\": \"Yuki Tsunoda\", \"ALB\": \"Alexander Albon\", \"HUL\": \"Nico Hülkenberg\", \"DOO\": \"Jack Doohan\", \"COL\": \"Logan Sargeant\",\n",
+    "    \"LAW\": \"Liam Lawson\", \"ZHO\": \"Guanyu Zhou\", \"GAS\": \"Pierre Gasly\", \"STR\": \"Lance Stroll\", \"BOT\": \"Valtteri Bottas\", \"MAG\": \"Kevin Magnussen\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "a699b882-5e21-425d-aede-11d045d2bfad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Race Simulation for Abu Dhabi grand prix - 2024:\n",
+      "\n",
+      "╒═════════════════╤═══════════╤══════════════╤═══════════╤══════════════╤═══════════╤══════════════╤══════════════╤═══════════════════╕\n",
+      "│ Driver          │ Stint 1   │ Compound 1   │ Stint 2   │ Compound 2   │ Stint 3   │ Compound 3   │ Gap          │ Total Race Time   │\n",
+      "╞═════════════════╪═══════════╪══════════════╪═══════════╪══════════════╪═══════════╪══════════════╪══════════════╪═══════════════════╡\n",
+      "│ Max Verstappen  │ 1–21      │ HARD         │ 22–42     │ SOFT         │ 43–58     │ MEDIUM       │ Leader       │ 1:21:52.484       │\n",
+      "├─────────────────┼───────────┼──────────────┼───────────┼──────────────┼───────────┼──────────────┼──────────────┼───────────────────┤\n",
+      "│ Lewis Hamilton  │ 1–50      │ HARD         │ 51–51     │ MEDIUM       │ 52–58     │ SOFT         │ +0:00:04.529 │ 1:21:57.013       │\n",
+      "├─────────────────┼───────────┼──────────────┼───────────┼──────────────┼───────────┼──────────────┼──────────────┼───────────────────┤\n",
+      "│ Lando Norris    │ 1–38      │ HARD         │ 39–40     │ MEDIUM       │ 41–58     │ SOFT         │ +0:01:26.402 │ 1:23:18.886       │\n",
+      "├─────────────────┼───────────┼──────────────┼───────────┼──────────────┼───────────┼──────────────┼──────────────┼───────────────────┤\n",
+      "│ Charles Leclerc │ 1–37      │ HARD         │ 38–49     │ MEDIUM       │ 50–58     │ SOFT         │ +0:01:33.070 │ 1:23:25.554       │\n",
+      "├─────────────────┼───────────┼──────────────┼───────────┼──────────────┼───────────┼──────────────┼──────────────┼───────────────────┤\n",
+      "│ Oscar Piastri   │ 1–30      │ HARD         │ 31–38     │ MEDIUM       │ 39–58     │ SOFT         │ +0:01:39.256 │ 1:23:31.740       │\n",
+      "╘═════════════════╧═══════════╧══════════════╧═══════════╧══════════════╧═══════════╧══════════════╧══════════════╧═══════════════════╛\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "\n",
+    "    year    = 2024\n",
+    "    gp_name = \"Abu Dhabi\"\n",
+    "\n",
+    "    \n",
+    "    #year    = int(input(\"Year (e.g. 2024): \"))\n",
+    "    #gp_name = input(\"Grand Prix (e.g. Abu Dhabi): \")\n",
+    "\n",
+    "    total_laps, avg_pit = get_race_parameters(year, gp_name)\n",
+    "    avg_deg, feat_cols, driver_cols, compound_cols, model = load_artifacts()\n",
+    "\n",
+    "    #test = pd.read_pickle(\"data/test_features.pkl\")\n",
+    "    test = pd.read_pickle(f\"{data_path}/test_features.pkl\")\n",
+    "    drivers = sorted(test.Driver.unique())\n",
+    "    preferred = {d: test[test.Driver==d].Compound.mode()[0] for d in drivers}\n",
+    "\n",
+    "\n",
+    "    pit_counts = defaultdict(int)\n",
+    "\n",
+    "    rows = []\n",
+    "    for drv in drivers:\n",
+    "        cands = all_strategies_for_driver(\n",
+    "            drv, preferred[drv],\n",
+    "            total_laps, avg_deg,\n",
+    "            feat_cols, driver_cols, compound_cols,\n",
+    "            model, avg_pit\n",
+    "        )\n",
+    "\n",
+    "        chosen = None\n",
+    "        for t, pits, strat in cands:\n",
+    "            if all(pit_counts[lap] < 5 for lap in pits):\n",
+    "                chosen = (t, pits, strat)\n",
+    "                break\n",
+    "        if chosen is None:\n",
+    "            chosen = cands[0]\n",
+    "\n",
+    "        ttime, pit_laps, strat = chosen\n",
+    "        for lap in pit_laps:\n",
+    "            pit_counts[lap] += 1\n",
+    "\n",
+    "        # format output\n",
+    "        entry = {\n",
+    "            \"Driver\": driver_name.get(drv, drv),\n",
+    "            \"Total Race Time (s)\": ttime\n",
+    "        }\n",
+    "        lap0 = 1\n",
+    "        for i, (cmpd, L) in enumerate(strat, 1):\n",
+    "            lap1, lap2 = lap0, lap0+L-1\n",
+    "            entry[f\"Stint {i}\"] = f\"{lap1}–{lap2}\"\n",
+    "            entry[f\"Compound {i}\"] = cmpd\n",
+    "            lap0 += L\n",
+    "        if len(strat) == 2:\n",
+    "            entry[\"Stint 3\"] = \"\"\n",
+    "            entry[\"Compound\"] = \"\"\n",
+    "        rows.append(entry)\n",
+    "\n",
+    "    rows = sorted(rows, key=lambda x: x[\"Total Race Time (s)\"])\n",
+    "\n",
+    "    leader_time = rows[0][\"Total Race Time (s)\"]\n",
+    "    \n",
+    "    for row in rows:\n",
+    "        gap_sec = row[\"Total Race Time (s)\"] - leader_time\n",
+    "        row[\"Gap\"] = \"Leader\" if gap_sec == 0 else \"+\" + format_time(gap_sec)\n",
+    "        row[\"Total Race Time\"] = format_time(row[\"Total Race Time (s)\"])\n",
+    "        del row[\"Total Race Time (s)\"]\n",
+    "\n",
+    "    df_out = pd.DataFrame(rows)\n",
+    "    \n",
+    "    top_5 = df_out = df_out.head(5)\n",
+    "    \n",
+    "    print(f\"\\nRace Simulation for {gp_name} grand prix - {year}:\\n\")\n",
+    "    \n",
+    "    print(tabulate(top_5, headers='keys', tablefmt='fancy_grid', showindex=False))\n",
+    "\n",
+    "if __name__==\"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e59d81b-f82d-46e5-947b-fa7282f2f30b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
