--- a/notebooks/6_Simulation_Engine.ipynb
+++ b/notebooks/6_Simulation_Engine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "c84f8074-e6f1-42ee-b84b-3a723070574b",
    "metadata": {},
    "outputs": [],
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "7dd587cc-255c-48fe-bff0-f18a7e2c0b8f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Paths\n",
-    "data_path = r\"Desktop\\F1Project\\data\"\n",
-    "model_path = r\"C:Desktop\\F1Project\\models\"\n",
+    "data_path = r\"C:\\Users\\Sran\\Desktop\\F1Project\\data\" # Set Path \n",
+    "model_path = r\"C:\\Users\\Sran\\Desktop\\F1Project\\models\" # Set Path \n",
     "\n",
     "# Load test features and model\n",
     "train_features = pd.read_pickle(f\"{data_path}/train_features.pkl\")\n",
@@ -39,14 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "f9e1fb56-375b-4fcc-886e-3f0312d26d78",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_race_parameters(year, gp_name, session_type='R'):\n",
-    "    fastf1.Cache.enable_cache(r\"C:\\Users\\Sran\\Desktop\\F1Project\\cache\")\n",
-    "    #\"C:\\Users\\Sran\\Desktop\\F1Project\\cache\"\n",
+    "    fastf1.Cache.enable_cache(r\"\\cache\") # Set Path \n",
     "    session = fastf1.get_session(year, gp_name, session_type)\n",
     "    session.load()\n",
     "    driver_name = {drv: data[\"FullName\"] for drv, data in session.results.iterrows()}\n",
@@ -66,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "b22b5d8d-0af9-494f-8f7a-85e839db1c91",
    "metadata": {},
    "outputs": [],
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "655a5d6a-596c-427e-a6af-7c396586c65b",
    "metadata": {},
    "outputs": [],
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "90650b6c-14d6-4ed2-936e-426a378c3d19",
    "metadata": {},
    "outputs": [],
@@ -195,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "451e24f3-5396-4b6d-a6a6-cba452a78dbd",
    "metadata": {},
    "outputs": [],
@@ -209,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "id": "c3671384-8c0f-4893-b03f-3ad89b2a36fd",
    "metadata": {},
    "outputs": [],
@@ -223,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "id": "a699b882-5e21-425d-aede-11d045d2bfad",
    "metadata": {},
    "outputs": [
