--- a/notebooks/5_Visualization.ipynb
+++ b/notebooks/5_Visualization.ipynb
@@ -21,8 +21,8 @@
    "outputs": [],
    "source": [
     "# Paths\n",
-    "data_path = r\"C:\\Users\\Sran\\Desktop\\F1Project\\data\" # Set the Path Accordingly\n",
-    "model_path = r\"C:\\Users\\Sran\\Desktop\\F1Project\\models\"\n",
+    "data_path = r\"\\data\" # Set the Path Accordingly\n",
+    "model_path = r\"\\models\"\n",
     "\n",
     "# Load test features and model\n",
     "train_features = pd.read_pickle(f\"{data_path}/train_features.pkl\")\n",
@@ -194,7 +194,7 @@
     "fig.suptitle(\"Abu Dhabi 2024 (Actual vs Predicted Lap Times) – All Drivers\", fontsize=16)\n",
     "fig.legend([\"Actual\", \"Predicted\"], loc='lower center', ncol=2)\n",
     "plt.tight_layout(rect=[0, 0.05, 1, 0.95])\n",
-    "#plt.savefig(\"C:/visuals/laptimes_drivers.png\", dpi=300, bbox_inches='tight')\n",
+    "#plt.savefig(\"/visuals/laptimes_drivers.png\", dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -239,7 +239,7 @@
     "plt.ylabel(\"Deviation (seconds)\", fontsize=12)\n",
     "plt.grid(True, linestyle='--', alpha=0.5)\n",
     "plt.tight_layout()\n",
-    "#plt.savefig(\"C:/visuals/deviation_laptimes_ver.png\", dpi=300, bbox_inches='tight')\n",
+    "#plt.savefig(\"/visuals/deviation_laptimes_ver.png\", dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -294,7 +294,7 @@
     "plt.grid(axis='y', linestyle='--', alpha=0.5)\n",
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
-    "#plt.savefig(\"C:/visuals/deviation.png\", dpi=300, bbox_inches='tight')\n",
+    "#plt.savefig(\"/visuals/deviation.png\", dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
