6_Simulation_Engine.ipynb

--- a/notebooks/6_Simulation_Engine.ipynb
+++ b/notebooks/6_Simulation_Engine.ipynb
@@ -74,7 +74,7 @@
     "    #train = pd.read_pickle(\"data/train_features.pkl\")\n",
     "    train = pd.read_pickle(f\"{data_path}/train_features.pkl\")\n",
     "    #model = joblib.load(\"models/gbr_model.pkl\")\n",
-    "    model = joblib.load(f\"{model_path}/gbr_model.pkl\")\n",
+    "    model = joblib.load(f\"{model_path}/rf_model.pkl\")\n",
     "\n",
     "    # avg degradation per compound\n",
     "    avg_deg = (\n",
