--- a/notebooks/5_Visualization.ipynb
+++ b/notebooks/5_Visualization.ipynb
@@ -30,7 +30,6 @@
     "\n",
     "\n",
     "rf_model = joblib.load(f\"{model_path}/rf_model.pkl\")\n",
-    "gbr_model = joblib.load(f\"{model_path}/gbr_model.pkl\")"
    ]
   },
   {
@@ -71,7 +70,7 @@
     "\n",
     "driver_test_encoded = test_encoded.loc[driver_test_features.index].copy()\n",
     "\n",
-    "driver_predictions = gbr_model.predict(driver_test_encoded.drop(\"LapTimeSeconds\", axis=1))\n",
+    "driver_predictions = rf_model.predict(driver_test_encoded.drop(\"LapTimeSeconds\", axis=1))\n",
     "\n",
     "lap_numbers = driver_test_features[\"LapNumber\"].values\n",
     "actual_lap_times = driver_test_features[\"LapTimeSeconds\"].values"
