--- a/notebooks/5_Visualization.ipynb
+++ b/notebooks/5_Visualization.ipynb
@@ -30,6 +30,7 @@
     "\n",
     "\n",
     "rf_model = joblib.load(f\"{model_path}/rf_model.pkl\")\n",
+    "gbr_model = joblib.load(f\"{model_path}/gbr_model.pkl\")"
    ]
   },
   {
